Fix layout issues

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -38,5 +38,4 @@
     border: 1px solid #E7E9FC;
     border-top: none;
     padding: 32px 16px;
-    wrap: wrap;
 }
